# stencil

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
astaroth/: CMakeLists.txt  astaroth.conf  astaroth.cu  astaroth.h  astaroth_utils.cu  astaroth_utils.h  boundconds.cuh  errchk.h  integration.cuh  kernels.cu  kernels.h  math_utils.h  notes.md  packing.cuh  reductions.cuh  reductions.cuh.orig  user_defines.h  user_kernels.h  user_kernels.h.orig
ci/: build.sh  env.sh  install_deps.sh  test.sh
cmake/: FindNUMA.cmake
cmake/toolchains/: deneb-mpich-3.4a3.cmake  deneb-mvapich2-2.3.4.cmake  deneb-openmpi-4.0.5.cmake
include/stencil/: accessor.hpp  align.cuh  argparse.hpp  array.hpp  boundary.hpp  copy.cuh  cuda_runtime.hpp  device_allocator.hpp  dim3.cuh  dim3.hpp  direction_map.hpp  gpu_topo.cuh  gpu_topology.hpp  local_domain.cuh  local_domain.hpp  logging.hpp  machine.hpp  managed_allocator.hpp  mat2d.hpp  method.hpp  mpi.hpp  mpi_topology.hpp  numeric.hpp  nvml.hpp  pack_kernel.cuh  packer.cuh  partition.hpp  pitched_ptr.hpp  placement_intranoderandom.hpp  qap.hpp  radius.hpp  rcstream.hpp  rect3.hpp  rt.hpp  scratch.cuh  stencil.cuh  stencil.hpp  timer.hpp  topology.hpp  translate.cuh  (+9 more)
scripts/: run_2_8.sb  run_strong_2_1_1.sb  run_strong_2_1_2.sb  run_strong_2_2_2.sb  run_strong_4_1_1.sb  run_strong_4_1_2.sb  run_strong_4_2_2.sb  run_strong_8_1_1.sb  run_strong_8_1_2.sb  run_strong_mp_2_1_2.sb  run_strong_mp_8_1_2.sb  run_weak_4_1_1.sb  run_weak_4_1_2.sb  run_weak_8_1_1.sb  run_weak_8_2_2.sb  run_weak_mp_2_2_2.sb  run_weak_mp_4_1_2.sb  run_weak_mp_8_1_2.sb
scripts/deneb/: astaroth.sh
scripts/hal/: run_strong_1_1_1.sb  run_strong_1_1_2.sb  run_strong_1_2_2.sb  run_strong_6_1_1.sb  run_strong_6_1_2.sb  run_strong_6_2_2.sb  run_strong_8_2_2.sb  run_strong_mp_1_2_2.sb  run_strong_mp_2_2_2.sb  run_strong_mp_4_1_2.sb  run_strong_mp_4_2_2.sb  run_strong_mp_6_1_2.sb  run_strong_mp_6_2_2.sb  run_strong_mp_8_2_2.sb  run_weak_1_1_1.sb  run_weak_1_1_2.sb  run_weak_1_2_2.sb  run_weak_2_1_1.sb  run_weak_2_1_2.sb  run_weak_2_2_2.sb  run_weak_4_1_1.sb  run_weak_4_1_2.sb  run_weak_4_2_2.sb  run_weak_6_1_1.sb  run_weak_6_1_2.sb  run_weak_6_2_2.sb  run_weak_8_1_2.sb  run_weak_method_2_2_2.sb  run_weak_method_4_2_2.sb  run_weak_mp_1_2_2.sb  run_weak_mp_2_1_2.sb  run_weak_mp_4_2_2.sb  run_weak_mp_6_1_2.sb  run_weak_mp_6_2_2.sb  run_weak_mp_8_2_2.sb  run_weak_mp_method_2_2_2.sb  run_weak_mp_method_4_2_2.sb  run_weak_mp_smpi_2_2_2.sb  run_weak_mp_smpi_4_2_2.sb  run_weak_mp_smpi_6_2_2.sb  (+17 more)
scripts/summit/: 1node_all.sh  1node_bench_exchange.sh  1node_jacobi3d.sh  1node_test.sh  1node_weak_exchange.sh  2node_astaroth.sh  512node_astaroth.sh  512node_jacobi3d.sh  512node_weak_exchange.sh  64node_astaroth.sh  6node_bench_mpi.sh  astaroth.sh  interactive.sh  run.sh  run_16node_strong_spec.sh  run_16node_weak_spec.sh  run_1node_cudaaware.sh  run_1node_placement.sh  run_1node_spec.sh  run_256node_strong_spec.sh  run_256node_weak_spec.sh  run_2node_pingpong.sh  run_4node_pingpong.sh  run_campi.sh  run_weak.sh  submit.sh  submit_weak.sh  weak_256n.sh
scripts/summit/cuda_aware_experiments/: run_1node_cudaaware.sh
src/: CMakeLists.txt  astaroth_sim.cu  bench_alltoallv.cu  bench_buf_exchange.cu  bench_exchange.cu  bench_pack.cu  bench_qap.cu  copy.cu  gpu_topology.cpp  local_domain.cu  machine.cpp  main.cu  measure_buf_exchange.cu  numeric.cpp  pack_kernel.cu  packer.cu  pingpong.cu  placement_intranoderandom.cpp  rcstream.cpp  statistics.cpp  statistics.hpp  stencil.cu  strong.cu  timer.cpp  topology.cpp  translate.cu  translator.cu  tx_colocated.cu  tx_colocated_direct_access.cu  tx_cuda_aware_mpi.cu  tx_ipc.cpp  unpack_kernel.cu  weak.cu
test/: CMakeLists.txt  test_any_tx.cu  test_cpu_accessor.cpp  test_cpu_argparse.cpp  test_cpu_array.cpp  test_cpu_main.cpp  test_cpu_mat2d.cpp  test_cpu_numeric.cpp  test_cpu_partition.cpp  test_cpu_qap.cpp  test_cpu_radius.cpp  test_cpu_tx.cpp  test_cuda_accessor.cu  test_cuda_align.cu  test_cuda_allocator.cu  test_cuda_array.cu  test_cuda_aware_mpi.cu  test_cuda_gpu_topo.cu  test_cuda_local_domain.cu  test_cuda_main.cu  test_cuda_message.cu  test_cuda_mpi_colocatedtx.cu  test_cuda_mpi_cudaipc.cu  test_cuda_mpi_distributed_domain.cu  test_cuda_mpi_exchange.cu  test_cuda_mpi_main.cu  test_cuda_mpi_tx_ipc.cpp  test_cuda_mtregiontx.cu  test_cuda_pack.cu  test_cuda_packer.cu  test_cuda_packmemcpycopier.cu  test_cuda_rcstream.cu  test_cuda_regioncopier.cu  test_cuda_regiontx.cu  test_cuda_translate.cu  test_cuda_translate_kernel.cu  test_derivative.cu  test_distributed_domain.cu  test_exchange.cu  test_local_domain.cu  (+3 more)
